fix problem postlist visible behind navprofile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -62,3 +62,20 @@
 }
 
 
+@media screen and (min-width: 800px) {
+    
+    .icons-container {
+        max-width: 40px;
+        position: right;
+    }
+
+    .icons {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+    }
+}    
+
+
+
